template-apps/repo-app1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: repo-app1
spec:
  selector:
    app: repo-app1
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
