template-apps/repo-app1/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: repo-app1-ingress
  spec:
    ingressClassName: traefik
    rules:
      - http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: repo-app1
                  port:
                    number: 80
